--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         color: #52525a;
       }
       .list {
-        list-style-image: url("/Done_ring_round_fill.svg");
+        list-style-image: url("Done_ring_round_fill.svg");
       }
       div ol {
         list-style-type: none;
@@ -150,21 +150,21 @@
         <ol>
           <li>
             <img
-              src="/Done_ring_round_fill.svg"
+              src="Done_ring_round_fill.svg"
               alt="checkmark"
             />
             <span>Checklist to Review an Academic Paper</span>
           </li>
           <li>
             <img
-              src="/Done_ring_round_fill.svg"
+              src="Done_ring_round_fill.svg"
               alt="checkmark"
             />
             <span>Peer Review Checklist</span>
           </li>
           <li>
             <img
-              src="/Done_ring_round_fill.svg"
+              src="Done_ring_round_fill.svg"
               alt="checkmark"
             />
             <span
@@ -177,32 +177,32 @@
       <div class="card2" id="cardy">
         <div class="review1" id="r1">
           <img
-            src="/google-testimonial.png"
+            src="google-testimonial.png"
             alt="Google"
             id="google"
           />
           <img
-            src="/Star_fill.svg"
+            src="Star_fill.svg"
             alt="StarFill"
             class="stars"
           />
           <img
-            src="/Star_fill.svg"
+            src="Star_fill.svg"
             alt="StarFill"
             class="stars"
           />
           <img
-            src="/Star_fill.svg"
+            src="Star_fill.svg"
             alt="StarFill"
             class="stars"
           />
           <img
-            src="/Star_fill.svg"
+            src="Star_fill.svg"
             alt="StarFill"
             class="stars"
           />
           <img
-            src="/Star_fill_gray.svg"
+            src="Star_fill_gray.svg"
             alt="StarFill"
             class="stars"
           />
@@ -211,32 +211,32 @@
         </div>
         <div class="review2" id="r2">
           <img
-            src="/meta-testimonial.png"
+            src="meta-testimonial.png"
             alt="Meta"
             id="meta"
           />
           <img
-            src="/Star_fill.svg"
+            src="Star_fill.svg"
             alt="StarFill"
             class="stars"
           />
           <img
-            src="/Star_fill.svg"
+            src="Star_fill.svg"
             alt="StarFill"
             class="stars"
           />
           <img
-            src="/Star_fill.svg"
+            src="Star_fill.svg"
             alt="StarFill"
             class="stars"
           />
           <img
-            src="/Star_fill.svg"
+            src="Star_fill.svg"
             alt="StarFill"
             class="stars"
           />
           <img
-            src="/Star_fill.svg"
+            src="Star_fill.svg"
             alt="StarFill"
             class="stars"
           />
